--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -15,7 +15,7 @@
      cursor: pointer;
 }
 .new-chat{
-     margin-top: 10px;
+     margin-top: 50px;
      display: inline-flex;
      align-items: center;
      gap: 10px;
@@ -45,4 +45,13 @@
 }
 .recent-entry:hover{
      background-color: #e6eaf1;
+}
+/* bottom */
+.bottom{
+     display: flex;
+     flex-direction: column;
+}
+.bottom-item{
+     margin-right: 10px;
+     cursor: pointer;
 }
